[gd_scene load_steps=9 format=3 uid="uid://ccwfks8124pm0"]

[ext_resource type="Theme" uid="uid://bklmr3xmk4m5u" path="res://global_theme.tres" id="1_1s22o"]
[ext_resource type="Script" path="res://Scene/commonPanel/secret_card_panel.gd" id="1_g5oxe"]
[ext_resource type="PackedScene" uid="uid://5qxpn6avk7bx" path="res://Scene/prefab/ShopItem.tscn" id="2_susxj"]
[ext_resource type="Texture2D" uid="uid://b27n7epjvckt2" path="res://Asset/items/怪谈1.png" id="3_frq3y"]
[ext_resource type="Texture2D" uid="uid://btdj7fau23pe3" path="res://Asset/items/怪谈2.png" id="4_5jeke"]
[ext_resource type="Texture2D" uid="uid://coaij30kaq33w" path="res://Asset/items/怪谈3.png" id="5_pfwg7"]
[ext_resource type="Texture2D" uid="uid://c1ictrodihlpd" path="res://Asset/items/怪谈4.png" id="6_n71we"]
[ext_resource type="FontFile" uid="uid://to00njkwmxts" path="res://Asset/Font/1_sim.ttf" id="7_5t35b"]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 128
script = ExtResource("1_g5oxe")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -983.0
offset_top = -266.0
offset_right = 983.0
offset_bottom = 239.0
grow_horizontal = 2
pivot_offset = Vector2(630.615, 267.699)
theme = ExtResource("1_1s22o")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 2
offset_left = -883.0
offset_top = -221.0
offset_right = 943.0
offset_bottom = 185.0

[node name="CardHBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="title" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_5t35b")
theme_override_font_sizes/font_size = 40
text = "请选择你的诡异卡
"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10

[node name="img" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Control3" type="Control" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Control" type="Control" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="detail" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("7_5t35b")
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Control5" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Button" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "获取这张卡"

[node name="Control3" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Control4" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Grid" type="GridContainer" parent="Control"]
custom_minimum_size = Vector2(0, 100)
layout_direction = 1
layout_mode = 2
offset_left = -559.0
offset_top = -151.0
offset_right = 113.0
offset_bottom = -51.0
scale = Vector2(2, 2)
theme_override_constants/h_separation = 80
columns = 6

[node name="Control1" parent="Control/Grid" instance=ExtResource("2_susxj")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"
img = ExtResource("3_frq3y")
isShop = false
itemstype = 13

[node name="Control2" parent="Control/Grid" instance=ExtResource("2_susxj")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"
img = ExtResource("4_5jeke")
isShop = false
itemstype = 14

[node name="Control3" parent="Control/Grid" instance=ExtResource("2_susxj")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"
img = ExtResource("5_pfwg7")
isShop = false
itemstype = 15

[node name="Control4" parent="Control/Grid" instance=ExtResource("2_susxj")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"
img = ExtResource("6_n71we")
isShop = false
itemstype = 16

[connection signal="button_down" from="Control/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="gui_input" from="Control/Grid/Control1" to="." method="_on_control_1_gui_input"]
[connection signal="gui_input" from="Control/Grid/Control2" to="." method="_on_control_2_gui_input"]
[connection signal="gui_input" from="Control/Grid/Control3" to="." method="_on_control_3_gui_input"]
[connection signal="gui_input" from="Control/Grid/Control4" to="." method="_on_control_4_gui_input"]
